--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,14 @@ body, html{
 }
 body{
   margin: 0px;
-  background-color:#444;
-  font-size: 18px;
+  /* background-color:#444; */
+  background-image: url('https://wallpaperdj.com/wallpapers/qlimax_festival-1920x1080.jpg');
+  height: 500px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  /* font-size: 18px; */
 }
 body, a:link, a:visited, a:active{
   color: lightblue;
