--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ body{
 body, a:link, a:visited, a:active{
   color: lightblue;
 }
-.title, .addDancerButton{
+.title, .addDancerButton, .lineUpButton, .addBouncyDancerButton, .addSuperHeroDancerButton {
   padding:5px 12px;
   float:right;
 }
@@ -27,7 +27,10 @@ body, a:link, a:visited, a:active{
   background-color: #777;
 }
 .dancer{
-  border:10px solid red;
-  border-radius:10px;
   position:absolute;
 }
+/* #blinky{
+  border:10px solid yellow;
+  border-radius:10px;
+  position:absolute;
+} */
